--- a/index.html
+++ b/index.html
@@ -302,6 +302,38 @@
 
 /* Hover Button End */
 
+    /* Popup Start */
+    .popup {
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            display: none;
+        }
+        .popup-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888888;
+            width: 30%;
+            font-weight: bolder;
+        }
+        .popup-content button {
+            display: block;
+            margin: 0 auto;
+        }
+        .show {
+            display: block;
+        }
+        h1 {
+            color: green;
+        }
+    /* Popup End */
+
     </style>
 </head>
 
@@ -747,7 +779,20 @@
                             <h5 style="color:white;">Hallucigenia</h5>
                             <p class="text-warning">Cambrian</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>
+                                 <!-- <button onclick="alert('Hello\nHow are you?')"><a class="btn btn-square" href=""><img width="95" height="95" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a></button>-->
+                                <!-- <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>-->
+                                <!--<button onclick="alert('Hello\nHow are you?')">Try it</button>-->
+
+                            <button id="myButton"><a class="btn btn-square"><img width="95" height="95" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a></button>
+                              <div id="myPopup" class="popup">
+                                <div class="popup-content">
+                                      <h1 style="color:green;">Hallucigenia</h1>
+                                      <p style="text-align: justify;">This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!</p>
+                                      <button id="closePopup">Close</button>
+                                      
+                                </div>
+                             </div>
+
                             </div>
                         </div>
                     </div>
@@ -884,6 +929,22 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
+    <!-- Popup Start -->
+    <script>
+    myButton.addEventListener("click", function () {
+        myPopup.classList.add("show");
+    });
+    closePopup.addEventListener("click", function () {
+        myPopup.classList.remove("show");
+    });
+    window.addEventListener("click", function (event) {
+        if (event.target == myPopup) {
+            myPopup.classList.remove("show");
+        }
+    });
+    
+    </script>
+    <!-- Popup End -->
 
 </body>
 
