--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
     <div class="container-fluid header bg-success p-0 mb-5">
         <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
             <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
+                <img src="img/DinoPaw.png" style="float:right;width:130px;height:130px;">
                 <h1 class="display-4 text-white mb-5">“We are just another kind of dinosaur trying to survive in this world.” 
                     <div class="flip-card">
                         <div class="flip-card-inner">
@@ -514,7 +515,6 @@
                         </div>
                     </div>
                 </h1>
-
                 <audio controls autoplay>
                     <source src="dinoAudio/angryDino.mp3" type="audio/mp3">
                 </audio>
