--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 
-    <!-- Museum Carousel -->
-    <link rel='stylesheet' href='css/swiper.min.css'>
-    <link rel="stylesheet" href="css/Cstyle.css">
+    <!-- Hexagon -->
+    <link rel="stylesheet" href="css/hexagon.css">
 
     <style>
     /*Full Screen Start
@@ -302,43 +301,6 @@
 
 /* Hover Button End */
 
-    /* Popup Start */
-    .popup {
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-            display: none;
-        }
-        .popup-content {
-            background-color: #F7DC6F;
-            margin: 10% auto;
-            padding: 20px;
-            border: 1px solid #888888;
-            width: 30%;
-            font-weight: bolder;
-        }
-        .popup-content button {
-            display: block;
-            margin: 0 auto;
-            color:#F7DC6F;
-            background-color: #04AA6D; /* Green */
-            cursor: pointer;
-            border-radius: 12px;
-
-        }
-        .show {
-            display: block;
-        }
-        h1 {
-            color: green;
-        }
-    /* Popup End */
-
 /* Flip Card Start */
 .flip-card {
   background-color: transparent;
@@ -497,7 +459,20 @@
                     </div>
                 </div>-->
             </div>
-            <a href="" class="btn btn-success rounded-0 py-4 px-lg-5 d-none d-lg-block">Chinese Dragons<i class="fa fa-arrow-right ms-3"></i></a>
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+            <!--<a href="" class="btn btn-success rounded-0 py-4 px-lg-5 d-none d-lg-block">Chinese Dragons<i class="fa fa-arrow-right ms-3"></i></a>-->
+            <!--<a href="" class="btn btn-success rounded-0 py-4 px-lg-5 d-none d-lg-block"><p style="color:red;">Dragons</p><img width="70" height="70" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-dragon-chinese-icongeek26-outline-gradient-icongeek26.png" style="width:50px;height:50px;"></a>-->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="58" height="58" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-dragon-chinese-icongeek26-outline-gradient-icongeek26.png" style="width:58px;height:58px;"></a>
+                </div>
+                <div class="flip-card-back">
+                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p style="color:red;">龍</p></a>
+                </div>
+                </div>
+            </div>
+            </div>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -512,10 +487,10 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img width="90" height="90" src="https://img.icons8.com/external-photo3ideastudio-gradient-photo3ideastudio/64/000000/external-dinosaur-museum-photo3ideastudio-gradient-photo3ideastudio.png">
+                            <img width="90" height="90" src="https://img.icons8.com/external-photo3ideastudio-gradient-photo3ideastudio/64/000000/external-dinosaur-museum-photo3ideastudio-gradient-photo3ideastudio.png" style="width:85px;height:85px;">
                         </div>
                         <div class="flip-card-back">
-                            <img width="90" height="90" src="https://img.icons8.com/external-photo3ideastudio-lineal-color-photo3ideastudio/64/external-dinosaur-museum-photo3ideastudio-lineal-color-photo3ideastudio.png">
+                            <img width="90" height="90" src="https://img.icons8.com/external-photo3ideastudio-lineal-color-photo3ideastudio/64/external-dinosaur-museum-photo3ideastudio-lineal-color-photo3ideastudio.png" style="width:85px;height:85px;">
                         </div>
                         </div>
                     </div>
@@ -594,7 +569,7 @@
                             <img width="65" height="65" src="https://img.icons8.com/external-flat-icons-maxicons/85/000000/external-ancient-the-lost-world-flat-flat-icons-maxicons-8.png" alt="Avatar" style="width:85px;height:85px;">
                           </div>
                           <div class="flip-card-back">
-                            <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-18.png">
+                            <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-18.png" style="width:85px;height:85px;">
                           </div>
                         </div>
                     </div>
@@ -624,10 +599,10 @@
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/000000/external-ancient-the-lost-world-flat-flat-icons-maxicons-11.png">
+                                <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/000000/external-ancient-the-lost-world-flat-flat-icons-maxicons-11.png" style="width:85px;height:85px;">
                               </div>
                               <div class="flip-card-back">
-                                <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-7.png">
+                                <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-7.png" style="width:85px;height:85px;">
                               </div>
                             </div>
                         </div>
@@ -668,10 +643,10 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img width="65" height="65" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/000000/external-allosaurus-the-lost-world-filled-outline-filled-outline-icons-maxicons.png" alt="Avatar" style="width:85px;height:85px;">
+                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/000000/external-allosaurus-the-lost-world-filled-outline-filled-outline-icons-maxicons.png" alt="Avatar" style="width:85px;height:85px;">
                       </div>
                       <div class="flip-card-back">
-                        <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-12.png">
+                        <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-12.png" style="width:85px;height:85px;">
                       </div>
                     </div>
                 </div>
@@ -789,10 +764,10 @@
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png">
+                                <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png" style="width:85px;height:85px;">
                               </div>
                               <div class="flip-card-back">
-                                <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/FAB005/ring-and-earrings.png">
+                                <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/FAB005/ring-and-earrings.png" style="width:85px;height:85px;">
                               </div>
                             </div>
                         </div>
@@ -856,6 +831,24 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                     <div class="position-relative h-100">
+                        <div class="gallery">
+                            <div class="clipped-border">
+                                <img src="img/Spinosaurus.jpg" id="clipped">
+                            </div>
+                            <div class="clipped-border">
+                                <img src="img/Spinosaurus.jpg" id="clipped">
+                            </div>
+                            <div class="clipped-border">
+                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                            </div>
+                            <div class="clipped-border">
+                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                            </div>
+                            <div class="clipped-border">
+                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                            </div>
+                            <div class="shadow"></div>
+                        </div>
                         <img class="position-absolute img-fluid w-100 h-100" src="img/Amber 1.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
@@ -864,25 +857,22 @@
     </div>
     <!-- Fossils End -->
 
-
     <!-- Paleozoic Start -->
     <section id="Paleozoic"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Paleozoic Era</p>
-
                 <div class="flip-card">
                     <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png">
+                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png" style="width:85px;height:85px;">
                     </div>
                     <div class="flip-card-back">
-                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-23.png">
+                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-23.png" style="width:85px;height:85px;">
                     </div>
                     </div>
                 </div>
-
                 <h1 style="color:green;">Paleozoic Era</h1>
             </div>
             <div class="row g-4">
@@ -895,19 +885,11 @@
                             <h5 style="color:white;">Hallucigenia</h5>
                             <p class="text-warning">Cambrian</p>
                             <div class="team-social text-center">
-                                 <!-- <button onclick="alert('Hello\nHow are you?')"><a class="btn btn-square" href=""><img width="95" height="95" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a></button>-->
-                                <!-- <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>-->
-                                <!--<button onclick="alert('Hello\nHow are you?')">Try it</button>-->
-
-                            <button id="myButton"><a class="btn btn-square"><img width="95" height="95" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a></button>
-                              <div id="myPopup" class="popup">
-                                <div class="popup-content corner">
-                                      <h1 style="color:green;">Hallucigenia</h1>
-                                      <p style="text-align: justify;">This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!</p>
-                                      <button id="closePopup">Close</button>
-                                </div>
-                             </div>
-
+                                <ul class="icon">
+                                    <h5 align="left"  style="color:yellow; line-height:70%">&nbsp; Length: 1 - 5 cm long</h5>
+                                    <h5 align="left"  style="color:yellow; line-height:70%">&nbsp; Lived: Ocean</h5>
+                                </ul>
+                                <!--<a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>-->
                             </div>
                         </div>
                     </div>
@@ -921,7 +903,8 @@
                             <h5 style="color:white;">Anomalocaris</h5>
                             <p class="text-warning">Cambrian</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="70" height="70" src="https://img.icons8.com/external-smashingstocks-outline-color-smashing-stocks/66/external-Shrimp-sea-life-smashingstocks-outline-color-smashing-stocks.png"></a>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Length: 40 cm long</h5>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Lived: Ocean </h5>
                             </div>
                         </div>
                     </div>
@@ -935,7 +918,8 @@
                             <h5 style="color:white;">Trilobita</h5>
                             <p class="text-warning">Ordovician</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/shellfish.png" alt="shellfish"/></a>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Length: 3 - 6 cm long</h5>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Lived: Ocean</h5>
                             </div>
                         </div>
                     </div>
@@ -949,7 +933,8 @@
                             <h5 style="color:white;">Ammonoidea</h5>
                             <p class="text-warning">Devonian</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/nautilus.png"></a>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Length: 3 cm - 3 m long</h5>
+                                <h5 align="left"  style="color:yellow; line-height:70%"> &nbsp; Lived: Ocean</h5>
                             </div>
                         </div>
                     </div>
@@ -958,6 +943,7 @@
         </div>
     </div>
     <!-- Paleozoic End -->
+
 
     <!-- Footer Start -->
     <footer class="text-center bg-success text-white py-2">               
@@ -1043,23 +1029,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
-    <!-- Popup Start -->
-    <script>
-    myButton.addEventListener("click", function () {
-        myPopup.classList.add("show");
-    });
-    closePopup.addEventListener("click", function () {
-        myPopup.classList.remove("show");
-    });
-    window.addEventListener("click", function (event) {
-        if (event.target == myPopup) {
-            myPopup.classList.remove("show");
-        }
-    });
-    
-    </script>
-    <!-- Popup End -->
 
 </body>
 
