--- a/index.html
+++ b/index.html
@@ -345,6 +345,13 @@
 
 /* Flip Card End */
 
+/* 楷体 Start */
+.kai {
+  font-family: 'FZKai-Z03', 'FZKai-Z03S', 'Kaiti SC', STKaiti, KaiTi, cursive;
+  font-size: 40px;
+}
+/* 楷体 End */
+
     </style>
 </head>
 
@@ -468,7 +475,7 @@
                     <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="58" height="58" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-dragon-chinese-icongeek26-outline-gradient-icongeek26.png" style="width:58px;height:58px;"></a>
                 </div>
                 <div class="flip-card-back">
-                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p style="color:red;">龍</p></a>
+                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:red;">龍</p></a>
                 </div>
                 </div>
             </div>
