--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                                 <img src="img/GAmber.jpg"  id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/D"  id="clipped">
+                                <img src="img/DAmber.jpg"  id="clipped">
                             </div>
                             <div class="shadow"></div>
                         </div>
