--- a/index.html
+++ b/index.html
@@ -352,6 +352,24 @@
 }
 /* 楷体 End */
 
+/* Zoom Image Start */
+.zoom {
+  padding: 0px;
+  background-color: transparent;
+  transition: transform .5s;
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(3); /* IE 9 */
+  -webkit-transform: scale(3); /* Safari 3-8 */
+  transform: scale(3); 
+}
+
+/* Zoom Image End */
+
     </style>
 </head>
 
@@ -789,7 +807,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
                                         <!--<img width="40" height="40" src="https://img.icons8.com/office/40/one-ring.png">-->
-                                        <img width="60" height="60" src="img/yAmber.png"> 
+                                        <div class="zoom"><img width="60" height="60" src="img/yAmber.png"></div>
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-warning mb-0">Yellow</h5>
@@ -801,7 +819,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
                                         <!-- <img width="64" height="64" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/FA5252/external-earring-jewellery-flatart-icons-outline-flatarticons-6.png">-->
-                                        <img width="60" height="60" src="img/rAmber.png"> 
+                                        <div class="zoom"><img width="60" height="60" src="img/rAmber.png"></div>
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-danger mb-0">Red</h5>
@@ -813,7 +831,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
                                         <!-- <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-icongeek26/64/40C057/external-Bracelet-hippie-icongeek26-outline-icongeek26.png">-->
-                                        <img width="60" height="60" src="img/gAmber.png"> 
+                                        <div class="zoom"><img width="60" height="60" src="img/gAmber.png"></div>
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-success mb-0">Green</h5>
@@ -825,7 +843,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
                                         <!-- <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-crown-carnival-icongeek26-outline-gradient-icongeek26.png">-->
-                                        <img width="60" height="60" src="img/bAmber.png"> 
+                                        <div class="zoom"><img width="60" height="60" src="img/bAmber.png"></div>
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-primary mb-0">Blue</h5>
