--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   margin: auto;
   overflow: hidden;
   position: relative;
-  width: 480px;
+  width: 630px;
 }
 .slider::before, .slider::after {
   background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
@@ -424,7 +424,7 @@
   -webkit-animation: scroll 40s linear infinite;
           animation: scroll 40s linear infinite;
   display: flex;
-  width: calc(150px * 5);
+  width: calc(85px * 14);
 }
 .slider .slide {
   height: 100px;
@@ -723,44 +723,44 @@
                                     <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-11.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
+                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />-->
                                 </div>
                                 <div class="slide">
                                     <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-13.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-21.png" height="85" width="85" alt="" />
+                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-21.png" height="85" width="85" alt="" />-->
                                 </div>
                                 <div class="slide">
                                     <img src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-8.png"  height="85" width="85" alt="" />
                                 </div>
-                                <!--<div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                                <div class="slide">
+                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />-->
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />-->
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />-->
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />-->
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-                                </div>-->
+                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />-->
+                                </div>
                             </div>
                         </div>
                     </div>    
